--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.7.2
 Django==5.0.2
+gunicorn==21.2.0
+packaging==23.2
 pillow==10.2.0
+psycopg==3.1.18
+psycopg2-binary==2.9.9
 sqlparse==0.4.4
+typing_extensions==4.10.0
 whitenoise==6.6.0
