--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,7 +23,7 @@ services:
     expose:
       - 8000
     env_file:
-      - ./.env.prod
+      - ./.envs/.env.prod
     depends_on:
       - db
 
@@ -32,7 +32,7 @@ services:
     volumes:
      - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod.db
+      - ./.envs/.env.prod.db
 
 volumes:
   postgres_data:
