--- a/.envs/.env.prod
+++ b/.envs/.env.prod
@@ -2,7 +2,7 @@
 SECRET_KEY=change_me
 # DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1], 192.168.178.48
-DEBUG=False
+DJANGO_DEBUG=False
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=collector_prod
 SQL_USER=postgres
