--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ psycopg2-binary==2.9.9
 sqlparse==0.4.4
 typing_extensions==4.10.0
 whitenoise==6.6.0
+django-allauth==0.59.0
+django-cleanup==8.0.0
+django-htmx==1.17.2
