ADD midified .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,8 @@ var/
 *.egg
 
 # backup and mediafiles
-mediafiles/
-backup/
+mediafiles/*
+backup/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
