--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.1
 anyio==4.3.0
 asgiref==3.7.2
 attrs==23.2.0
+beautifulsoup4==4.12.3
 bidict==0.23.1
 certifi==2024.2.2
 cffi==1.16.0
@@ -21,6 +22,8 @@ fastapi==0.109.2
 frozenlist==1.4.1
 gunicorn==21.2.0
 h11==0.14.0
+html5lib==1.1
+htmx==0.0.0
 httpcore==1.0.4
 httptools==0.6.1
 httpx==0.27.0
@@ -53,7 +56,9 @@ PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.4.0
 simple-websocket==1.0.0
+six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 sqlparse==0.4.4
 starlette==0.36.3
 typing_extensions==4.10.0
@@ -62,6 +67,7 @@ uvicorn==0.29.0
 uvloop==0.19.0
 vbuild==0.8.2
 watchfiles==0.21.0
+webencodings==0.5.1
 websockets==12.0
 whitenoise==6.6.0
 wsproto==1.2.0
